--- a/gumandhealth.client/src/app/nutrition/recipes/recipes.component.html
+++ b/gumandhealth.client/src/app/nutrition/recipes/recipes.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<!--<div class="container mt-5">
   <h2>Healthy Recipes</h2>
   <div class="row">
     <div class="col-md-4" *ngFor="let recipe of recipes">
@@ -13,4 +13,4 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
