--- a/gumandhealth.client/src/app/components/home/home.component.html
+++ b/gumandhealth.client/src/app/components/home/home.component.html
@@ -1,14 +1,14 @@
 <!-- Page Preloder -->
-<div id="preloder">
+<!-- <div id="preloder">
   <div class="loader"></div>
-</div>
+</div> -->
 <!-- Header Section Begin -->
 
 <!-- Header End -->
 <!-- Hero Section Begin -->
 <div class="hero-slider">
   <div class="hero-items owl-carousel">
-    <div class="single-hero-item set-bg" data-setbg="img/slide-1.jpg">
+    <div class="single-hero-item set-bg" data-setbg="/assets/img/slide-1.jpg">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    <div class="single-hero-item set-bg" data-setbg="img/slide-2.jpg">
+    <div class="single-hero-item set-bg" data-setbg="/assets/img/slide-2.jpg">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <div class="single-hero-item set-bg" data-setbg="img/slide-3.jpg">
+    <div class="single-hero-item set-bg" data-setbg="/assets/img/slide-3.jpg">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -73,7 +73,7 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              <div class="booking-heading set-bg" data-setbg="img/booking.jpg">
+              <div class="booking-heading set-bg" data-setbg="/assets/img/booking.jpg">
                 <div class="booking-inner-text">
                   <h2>Book Your First Class</h2>
                   <p>
@@ -152,7 +152,7 @@
 </section>
 <!-- Services Section End -->
 <!-- Client Says Section Begin -->
-<section class="client-says set-bg" data-setbg="img/client-bg.jpg">
+<section class="client-says set-bg" data-setbg="/assets/img/client-bg.jpg">
   <div class="container">
     <div class="row">
       <div class="col-lg-9">
@@ -193,7 +193,7 @@
       </div>
       <div class="col-lg-6">
         <div class="lifestyle-img">
-          <img src="assets/img/lifestyle.jpg" alt="" />
+          <img src="/assets/img/lifestyle.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -208,7 +208,7 @@
         <div class="col-lg-4">
           <div class="boxes-item">
             <div class="boxes-pic">
-              <img src="assets/img/box-1.jpg" alt="" />
+              <img src="/assets/img/box-1.jpg" alt="" />
               <div class="boxes-text">
                 <h1>Crossfit</h1>
               </div>
@@ -218,7 +218,7 @@
         <div class="col-lg-4">
           <div class="boxes-item">
             <div class="boxes-pic">
-              <img src="assets/img/box-2.jpg" alt="" />
+              <img src="/assets/img/box-2.jpg" alt="" />
               <div class="boxes-text">
                 <h1>WOD</h1>
               </div>
@@ -228,7 +228,7 @@
         <div class="col-lg-4">
           <div class="boxes-item">
             <div class="boxes-pic">
-              <img src="assets/img/box-3.jpg" alt="" />
+              <img src="/assets/img/box-3.jpg" alt="" />
               <div class="boxes-text">
                 <h1>Kids & Teens</h1>
               </div>
@@ -260,7 +260,7 @@
 <!-- Map Section Begin -->
 <div class="map">
   <iframe
-    src="assets/https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24182.553681405774!2d-73.99529774360377!3d40.744003480221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259737e225aa1%3A0x652ff78189c0e104!2sStuyvesant%20Town-Peter%20Cooper%20Village%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1567961277124!5m2!1sen!2sbd"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24182.553681405774!2d-73.99529774360377!3d40.744003480221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259737e225aa1%3A0x652ff78189c0e104!2sStuyvesant%20Town-Peter%20Cooper%20Village%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1567961277124!5m2!1sen!2sbd"
     height="585"
     style="border: 0"
     allowfullscreen
