--- a/gumandhealth.client/src/app/components/home/home.component.html
+++ b/gumandhealth.client/src/app/components/home/home.component.html
@@ -7,8 +7,9 @@
 <!-- Header End -->
 <!-- Hero Section Begin -->
 <div class="hero-slider">
+  
   <div class="hero-items owl-carousel">
-    <div class="single-hero-item set-bg" data-setbg="/assets/img/slide-1.jpg">
+    <div class="single-hero-item set-bg" [style.backgroundImage]="'url(/assets/img/slide-1.jpg)'">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -26,7 +27,8 @@
         </div>
       </div>
     </div>
-    <div class="single-hero-item set-bg" data-setbg="/assets/img/slide-2.jpg">
+
+    <div class="single-hero-item set-bg" [style.backgroundImage]="'url(/assets/img/slide-2.jpg)'">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -44,7 +46,8 @@
         </div>
       </div>
     </div>
-    <div class="single-hero-item set-bg" data-setbg="/assets/img/slide-3.jpg">
+    
+    <div class="single-hero-item set-bg" [style.backgroundImage]="'url(/assets/img/slide-3.jpg)'">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -73,7 +76,8 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              <div class="booking-heading set-bg" data-setbg="/assets/img/booking.jpg">
+              
+              <div class="booking-heading set-bg" [style.backgroundImage]="'url(/assets/img/booking.jpg)'">
                 <div class="booking-inner-text">
                   <h2>Book Your First Class</h2>
                   <p>
