fix image pathes

--- a/gumandhealth.client/src/app/pages/classes/classes.component.html
+++ b/gumandhealth.client/src/app/pages/classes/classes.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section Begin -->
-<div class="hero-section set-bg" data-setbg="img/classes-bg.jpg">
+<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/classes-bg.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -70,7 +70,7 @@
 <!-- Classes Time Section End -->
 <div
   class="classes-time-section spad set-bg"
-  data-setbg="img/classes-time-bg.jpg"
+  [style.backgroundImage]="'url(/assets/img/classes-time-bg.jpg)'"
 >
   <div class="container">
     <div class="row">
