--- a/gumandhealth.client/src/app/pages/about/about.component.html
+++ b/gumandhealth.client/src/app/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section Begin -->
-<div class="hero-section set-bg" data-setbg="/assets/img/aboutus-bg.jpg">
+<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/aboutus-bg.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -43,7 +43,7 @@
 </section>
 <!-- About Us Section End -->
 <!-- About Counter Section Begin -->
-<section class="about-counter set-bg spad" data-setbg="/assets/img/about-counter.jpg">
+<section class="about-counter set-bg spad"[style.backgroundImage]="'url(/assets/img/about-counter.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
