--- a/gumandhealth.client/src/app/pages/blog/blog.component.html
+++ b/gumandhealth.client/src/app/pages/blog/blog.component.html
@@ -1,5 +1,8 @@
 <!-- Hero Section Begin -->
-<div class="hero-section set-bg" data-setbg="img/blog-bg.jpg">
+<div
+  class="hero-section set-bg"
+  [style.backgroundImage]="'url(/assets/img/blog-bg.jpg)'"
+>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -23,8 +26,8 @@
           </div>
           <div class="blog-widget">
             <ul>
-              <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
-              <li><img src="img/chat.png" alt="" /> <span>3 Comments</span></li>
+              <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
+              <li><img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span></li>
             </ul>
           </div>
         </div>
@@ -32,7 +35,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-item">
           <div class="blog-img">
-            <img src="img/blog/blog-1.jpg" alt="" />
+            <img src="/assets/img/blog/blog-1.jpg" alt="" />
           </div>
           <div class="blog-text">
             <span class="blog-time">12 Feb, 2019</span>
@@ -44,9 +47,9 @@
             </p>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
@@ -56,7 +59,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-item">
           <div class="blog-img">
-            <img src="img/blog/blog-2.jpg" alt="" />
+            <img src="/assets/img/blog/blog-2.jpg" alt="" />
           </div>
           <div class="blog-text">
             <span class="blog-time">12 Feb, 2019</span>
@@ -68,9 +71,9 @@
             </p>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
@@ -80,7 +83,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-item">
           <div class="blog-img">
-            <img src="img/blog/blog-3.jpg" alt="" />
+            <img src="/assets/img/blog/blog-3.jpg" alt="" />
           </div>
           <div class="blog-text">
             <span class="blog-time">12 Feb, 2019</span>
@@ -92,9 +95,9 @@
             </p>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
@@ -104,7 +107,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-item">
           <div class="blog-img">
-            <img src="img/blog/blog-4.jpg" alt="" />
+            <img src="/assets/img/blog/blog-4.jpg" alt="" />
           </div>
           <div class="blog-text">
             <span class="blog-time">12 Feb, 2019</span>
@@ -116,9 +119,9 @@
             </p>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
@@ -128,7 +131,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-video">
           <div class="blog-img">
-            <img src="img/blog/blog-video.jpg" alt="" />
+            <img src="/assets/img/blog/blog-video.jpg" alt="" />
             <div class="play-btn">
               <a
                 href="https://www.youtube.com/watch?v=hGsVLXnFgbA"
@@ -141,9 +144,9 @@
             <h3>10 Minutes Crossfit</h3>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
@@ -153,7 +156,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-item">
           <div class="blog-img">
-            <img src="img/blog/blog-5.jpg" alt="" />
+            <img src="/assets/img/blog/blog-5.jpg" alt="" />
           </div>
           <div class="blog-text">
             <span class="blog-time">12 Feb, 2019</span>
@@ -165,9 +168,9 @@
             </p>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
@@ -177,7 +180,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="single-blog-item blog-item">
           <div class="blog-img">
-            <img src="img/blog/blog-6.jpg" alt="" />
+            <img src="/assets/img/blog/blog-6.jpg" alt="" />
           </div>
           <div class="blog-text">
             <span class="blog-time">12 Feb, 2019</span>
@@ -189,9 +192,9 @@
             </p>
             <div class="blog-widget">
               <ul>
-                <li><img src="img/like.png" alt="" /> <span>15 Likes</span></li>
+                <li><img src="/assets/img/like.png" alt="" /> <span>15 Likes</span></li>
                 <li>
-                  <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                  <img src="/assets/img/chat.png" alt="" /> <span>3 Comments</span>
                 </li>
               </ul>
             </div>
