--- a/gumandhealth.client/src/app/pages/contact/contact.component.html
+++ b/gumandhealth.client/src/app/pages/contact/contact.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section Begin -->
-<div class="hero-section set-bg" data-setbg="img/contact-bg.jpg">
+<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/contact-bg.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
