change header add link +nutrition code+insert image

--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -15,7 +15,9 @@
               <li><a routerLink="/about" routerLinkActive="active">About Us</a></li>
               <li><a routerLink="/classes" routerLinkActive="active">Classes</a></li>
               <li><a routerLink="/blog" routerLinkActive="active">Blog</a></li>
+              <li><a routerLink="/nutrition" routerLinkActive="active">nutrition</a></li>
               <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+
               <li class="phone-num">
                 <i class="fa fa-phone"></i><span>+546 990221 123</span>
               </li>
