--- a/gumandhealth.client/src/app/nutrition/nutrition.component.html
+++ b/gumandhealth.client/src/app/nutrition/nutrition.component.html
@@ -3,16 +3,17 @@
     <!-- Card 1: Tips -->
     <div class="col-md-4">
       <div class="card shadow-sm">
-        <img src="https://via.placeholder.com/150"
+        <img src="/src/assets/img/imgnutrition.png"
              class="card-img-top"
              alt="Healthy Tips Image" />
         <div class="card-body">
           <h5 class="card-title">Healthy Tips</h5>
           <p class="card-text">
-            اكتشف نصائح التغذية الصحية التي تساعدك في الحصول على نمط حياة صحي.
+            Discover healthy nutrition tips that will help you achieve a healthy lifestyle.
           </p>
-          <button class="btn btn-primary" (click)="navigateToRecipes(1)">
-            استكشاف النصائح
+
+          <button class="btn btn-success" (click)="navigateToRecipes(1)">
+            Explore Tips
           </button>
         </div>
       </div>
@@ -21,19 +22,21 @@
     <!-- Card 2: Recipes -->
     <div class="col-md-4">
       <div class="card shadow-sm">
-        <img src="https://via.placeholder.com/150"
+        <img src="/src/assets/img/lifestyle.jpg"
              class="card-img-top"
              alt="Healthy Recipes Image" />
         <div class="card-body">
           <h5 class="card-title">Healthy Recipes</h5>
           <p class="card-text">
-            استمتع بأشهى الوصفات الصحية التي تعزز من صحتك وتمدك بالطاقة.
+            Enjoy the most delicious healthy recipes that boost your health and energize you.
           </p>
-          <button class="btn btn-primary" (click)="navigateToRecipes(2)">
-            استكشاف الوصفات
+
+          <button class="btn btn-success" (click)="navigateToRecipes(2)">
+            Explore Recipes
           </button>
         </div>
       </div>
     </div>
   </div>
 </div>
+<br />
