--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -17,6 +17,7 @@
               <li><a routerLink="/blog" routerLinkActive="active">Blog</a></li>
               <li><a routerLink="/nutrition" routerLinkActive="active">nutrition</a></li>
               <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+              <li><a routerLink="/Profile" routerLinkActive="active">Profile</a></li>
 
               <li class="phone-num">
                 <i class="fa fa-phone"></i><span>+546 990221 123</span>
