--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -14,10 +14,12 @@
               <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
               <li><a routerLink="/about" routerLinkActive="active">About Us</a></li>
               <li><a routerLink="/classes" routerLinkActive="active">Classes</a></li>
-              
+
               <li><a routerLink="/nutrition" routerLinkActive="active">nutrition</a></li>
               <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
               <li><a routerLink="/Profile" routerLinkActive="active">Profile</a></li>
+              <li><a routerLink="/Gyms" routerLinkActive="active">Gyms</a></li>
+
 
               <li class="phone-num">
                 <i class="fa fa-phone"></i><span>+546 990221 123</span>
