un comment the my db context

--- a/gumandhealth.client/src/app/components/home/home.component.html
+++ b/gumandhealth.client/src/app/components/home/home.component.html
@@ -7,9 +7,11 @@
 <!-- Header End -->
 <!-- Hero Section Begin -->
 <div class="hero-slider">
-  
   <div class="hero-items owl-carousel">
-    <div class="single-hero-item set-bg" [style.backgroundImage]="'url(/assets/img/slide-1.jpg)'">
+    <div
+      class="single-hero-item set-bg"
+      [style.backgroundImage]="'url(/assets/img/slide-1.jpg)'"
+    >
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -28,7 +30,10 @@
       </div>
     </div>
 
-    <div class="single-hero-item set-bg" [style.backgroundImage]="'url(/assets/img/slide-2.jpg)'">
+    <div
+      class="single-hero-item set-bg"
+      [style.backgroundImage]="'url(/assets/img/slide-2.jpg)'"
+    >
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -46,8 +51,11 @@
         </div>
       </div>
     </div>
-    
-    <div class="single-hero-item set-bg" [style.backgroundImage]="'url(/assets/img/slide-3.jpg)'">
+
+    <div
+      class="single-hero-item set-bg"
+      [style.backgroundImage]="'url(/assets/img/slide-3.jpg)'"
+    >
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -76,8 +84,10 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              
-              <div class="booking-heading set-bg" [style.backgroundImage]="'url(/assets/img/booking.jpg)'">
+              <div
+                class="booking-heading set-bg"
+                [style.backgroundImage]="'url(/assets/img/booking.jpg)'"
+              >
                 <div class="booking-inner-text">
                   <h2>Book Your First Class</h2>
                   <p>
@@ -156,7 +166,10 @@
 </section>
 <!-- Services Section End -->
 <!-- Client Says Section Begin -->
-<section class="client-says set-bg" [style.backgroundImage]="'url(/assets/img/client-bg.jpg)'">
+<section
+  class="client-says set-bg"
+  [style.backgroundImage]="'url(/assets/img/client-bg.jpg)'"
+>
   <div class="container">
     <div class="row">
       <div class="col-lg-9">
@@ -197,8 +210,7 @@
       </div>
       <div class="col-lg-6">
         <div class="lifestyle-img">
-
-            <img src="/assets/img/lifestyle.jpg" alt="" />
+          <img src="/assets/img/lifestyle.jpg" alt="" />
         </div>
       </div>
     </div>
