--- a/gumandhealth.client/src/app/app.component.html
+++ b/gumandhealth.client/src/app/app.component.html
@@ -1,3 +1,8 @@
-﻿<app-header></app-header>
+if(!isAdmin){  
+<app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+}
+esle{
+<router-outlet></router-outlet>
+}
