--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -16,6 +16,7 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!------ Include the above in your HEAD tag ---------->
+  <link href="StyleSheet.css" rel="stylesheet">
 
 </head>
 
@@ -76,7 +77,8 @@
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="#">Dashboard 1
+                  <a href="#">
+                    Dashboard 1
                     <span class="badge badge-pill badge-success">Pro</span>
                   </a>
                 </li>
@@ -90,16 +92,16 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-            <a href="#">
+            <a routerLink="/displayClasses">
               <i class="fa fa-shopping-cart"></i>
-              <span>E-commerce</span>
+              <span>Classes</span>
               <span class="badge badge-pill badge-danger">3</span>
             </a>
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="#">Products
-
+                  <a href="#">
+                    Products
                   </a>
                 </li>
                 <li>
@@ -225,51 +227,14 @@
   </main>
   <!-- page-content" -->
 </div>
+
 <!-- page-wrapper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script>
-
-
-      jQuery(function ($) {
-
-        $(".sidebar-dropdown > a").click(function () {
-          $(".sidebar-submenu").slideUp(200);
-          if (
-            $(this)
-              .parent()
-              .hasClass("active")
-          ) {
-            $(".sidebar-dropdown").removeClass("active");
-            $(this)
-              .parent()
-              .removeClass("active");
-          } else {
-            $(".sidebar-dropdown").removeClass("active");
-            $(this)
-              .next(".sidebar-submenu")
-              .slideDown(200);
-            $(this)
-              .parent()
-              .addClass("active");
-          }
-        });
-
-        $("#close-sidebar").click(function () {
-          $(".page-wrapper").removeClass("toggled");
-        });
-        $("#show-sidebar").click(function () {
-          $(".page-wrapper").addClass("toggled");
-        });
-
-
-
-
-      });
-    </script>
+   <script src="file.js"></script>
 </body>
 
 </html>
