add class details

--- a/gumandhealth.client/src/app/pages/classes/classes.component.html
+++ b/gumandhealth.client/src/app/pages/classes/classes.component.html
@@ -3,8 +3,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
+
+
         <div class="hero-text">
-          <h1>Classes</h1>
+          <h2>Classes</h2>
         </div>
       </div>
     </div>
@@ -14,10 +16,21 @@
 <!-- Classes Section Begin -->
 <div class="classes-section spad">
   <div class="container">
+    <div class="search-container">
+      <input type="text"
+             placeholder="Search for classes..."
+             [(ngModel)]="searchTerm"
+             (input)="onSearch()"
+             class="search-input" />
+      <button (click)="onSearch()" class="search-button">Search</button>
+    </div>
+
     <div class="row">
-      <div class="col-lg-3 col-md-6" *ngFor="let classItem of classes">
+      <div class="col-lg-3 col-md-6" *ngFor="let classItem of filteredClasses">
         <div class="single-classes-item" (click)="goToClassDetails(classItem.id)">
-          <img src="https://localhost:7280/api/Classes/getImages/{{classItem.imagePath}}" alt="{{ classItem.name }}" class="class-image" />
+          <img [src]="'https://localhost:7280/api/Classes/getImages/' + classItem.imagePath"
+               alt="{{ classItem.name }}"
+               class="class-image" />
           <h4>{{ classItem.name }}</h4>
         </div>
       </div>
@@ -54,19 +67,4 @@
 
 
 <!-- Classes Time Section End -->
-<!-- Map Section Begin -->
-<div class="map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24182.553681405774!2d-73.99529774360377!3d40.744003480221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259737e225aa1%3A0x652ff78189c0e104!2sStuyvesant%20Town-Peter%20Cooper%20Village%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1567961277124!5m2!1sen!2sbd"
-          height="585"
-          style="border: 0"
-          allowfullscreen></iframe>
-  <div class="map-address">
-    <div class="map-address-text">
-      <ul>
-        <li>Main Str, no 23, <br />NY, New York PK 23589</li>
-        <li>+546 990221 123 <br />contact industryalinc.com</li>
-      </ul>
-    </div>
-  </div>
-</div>
 <!-- Map Section End -->
