--- a/gumandhealth.client/src/app/pages/admin-classes/admin-classes.component.html
+++ b/gumandhealth.client/src/app/pages/admin-classes/admin-classes.component.html
@@ -1,19 +1,42 @@
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
-<p>admin-classes works!</p>
+<div class="col-10" style="margin-left:17%">
+  <div class="bg-  rounded h-100 p-4">
+    <h6 class="mb-4">Classes</h6>
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Class Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Image</th>
+            <th scope="col">Price</th>
+            <th scope="col">Available Day</th>
+            <th scope="col">Start Time</th>
+            <th scope="col">End Time</th>
+            <th scope="col">Instructor Name</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let classItem of classes">
+            <td>{{ classItem.id }}</td>
+            <td>{{ classItem.name }}</td>
+            <td>{{ classItem.description }}</td>
+            <td><img [src]="classItem.imagePath" alt="{{ classItem.name }}" width="50"></td>
+            <td>{{ classItem.pricePerMonth }}</td>
+            <td>{{ classItem.availableDay }}</td>
+            <td>{{ classItem.startTime }}</td>
+            <td>{{ classItem.endTime }}</td>
+            <td>{{ classItem.instructorName }}</td>
+            <td>
+              <button class="btn btn-info">Edit</button>
+              <button class="btn btn-danger">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+</div>
+<app-admin></app-admin>
