--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -18,6 +18,7 @@
               <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
               <li><a routerLink="/Profile" routerLinkActive="active">Profile</a></li>
               <li><a routerLink="/Gyms" routerLinkActive="active">Gyms</a></li>
+              <li><a routerLink="/store" routerLinkActive="active">store</a></li>
               <li><a routerLink="/Admin" routerLinkActive="active">Admin</a></li>
 
               <li class="phone-num">
