--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -20,6 +20,8 @@
               <li><a routerLink="/Gyms" routerLinkActive="active">Gyms</a></li>
               <li><a routerLink="/store" routerLinkActive="active">store</a></li>
               <li><a routerLink="/Admin" routerLinkActive="active">Admin</a></li>
+              <li><a routerLink="/login" routerLinkActive="active">login</a></li>
+
 
               <li class="phone-num">
                 <i class="fa fa-phone"></i><span>+546 990221 123</span>
