--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -17,9 +17,9 @@
               <li><a routerLink="/nutrition" routerLinkActive="active">nutrition</a></li>
               <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
               <li><a routerLink="/Profile" routerLinkActive="active">Profile</a></li>
-              <li class="phone-num">
-                <i class="fa fa-phone"></i><span>+546 990221 123</span>
-              </li>
+              <li><a routerLink="/Shop" routerLinkActive="active">Shop</a></li>
+
+             
               <li class="search-btn search-trigger">
                 <i class="fa fa-search"></i>
               </li>
