--- a/gumandhealth.client/src/app/components/product-card/product-card.component.html
+++ b/gumandhealth.client/src/app/components/product-card/product-card.component.html
@@ -4,7 +4,7 @@
 
     <div class="col-md-4">
       <div class="card mb-4" style="width: 18rem">
-        <img [src]="product.image1" class="card-img-top" alt="Product Image" />
+        <img [src]="imageurl(product.image1)" class="card-img-top" alt="Product Image" />
         <div class="card-body">
           <h5 class="card-title">{{ product.name }}</h5>
           <p class="card-text">
