--- a/gumandhealth.client/src/app/pages/cart/cart.component.html
+++ b/gumandhealth.client/src/app/pages/cart/cart.component.html
@@ -24,7 +24,7 @@
           <td class="text-center">{{ item.quantity }}</td>
           <td class="text-right">{{ item.product?.price | currency }}</td>
           <td class="text-right">
-            {{ (item.product?.price ?? 0) * (item.quantity ?? 1) | currency }}
+            {{ (item.product?.price ?? 0) * (item.quantity) | currency }}
           </td>
           <td class="text-center">
             <button
