continue edit classes component

--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
             <ul>
               <!-- Use correct Angular routerLink and routerLinkActive -->
               <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
-              <li><a routerLink="/about" routerLinkActive="active">About Us</a></li>
+              <!--<li><a routerLink="/about" routerLinkActive="active">About Us</a></li>-->
               <li><a routerLink="/classes" routerLinkActive="active">Classes</a></li>
               <li><a routerLink="/nutrition" routerLinkActive="active">nutrition</a></li>
               <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
