--- a/gumandhealth.client/src/app/nutrition/recipes/recipes.component.html
+++ b/gumandhealth.client/src/app/nutrition/recipes/recipes.component.html
@@ -9,7 +9,7 @@
         <div class="flip-card-inner">
           <!-- الوجه الأمامي: الصورة -->
           <div class="flip-card-front">
-            <img [src]="category.imagePath" class="card-img-top" alt="{{ category.name }} Image">
+            <img [src]="'/assets/img/' + category.imagePath" class="card-img-top" alt="{{ category.name }} Image">
           </div>
           <!-- الوجه الخلفي: العنوان والنص -->
           <div class="flip-card-back">
