--- a/gumandhealth.client/src/app/components/product-card/product-card.component.html
+++ b/gumandhealth.client/src/app/components/product-card/product-card.component.html
@@ -1,28 +1,36 @@
-<div class="container">
-  <div class="row">
-    @for (product of products; track product.id) {
+<div class="container px-4 px-lg-5 mt-5">
+  <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+    <!-- Dynamic Product Cards -->
+    <div *ngFor="let product of products" class="col mb-5">
+      <div class="card h-100">
+        <!-- Product Image -->
+        <img class="card-img-top" [src]="imageurl(product.image1)" alt="Product Image" />
+        <!-- Product Details -->
+        <div class="card-body p-4">
+          <div class="text-center">
+            <!-- Product Name -->
+            <h5 class="fw-bolder">{{ product.name }}</h5>
+            <!-- Product Price and Discount -->
+            <p>
+              Price: ${{ product.price }}<br />
+              Discount: ${{ product.discount }}<br />
+              <small class="text-muted">{{ product.description }}</small>
+            </p>
+          </div>
+        </div>
 
-    <div class="col-md-4">
-      <div class="card mb-4" style="width: 18rem">
-        <img [src]="imageurl(product.image1)" class="card-img-top" alt="Product Image" />
-        <div class="card-body">
-          <h5 class="card-title">{{ product.name }}</h5>
-          <p class="card-text">
-            Price: ${{ product.price }}<br />
-            Discount: ${{ product.discount }}<br />
-            <small class="text-muted">{{ product.description }}</small>
-          </p>
-          <div class="d-flex justify-content-between">
-            <button class="btn btn-primary" (click)="addToCart(product)">
+        <!-- Product Actions -->
+        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+          <div class="text-center">
+            <button class="btn btn-outline-dark mt-auto" (click)="addToCart(product)">
               Add to Cart
             </button>
-            <button class="btn btn-secondary" (click)="showDetails(product)">
+            <button class="btn btn-outline-dark mt-auto" (click)="showDetails(product)">
               Show Details
             </button>
           </div>
         </div>
       </div>
     </div>
-    }
   </div>
 </div>
