Edit the profile page

--- a/gumandhealth.client/src/app/profile/profile.component.html
+++ b/gumandhealth.client/src/app/profile/profile.component.html
@@ -1,75 +1,81 @@
-
-
-  <div class="container-fluid">
-    <!-- Use container-fluid for full width -->
-    <div class="main-body">
-      <div class="row gutters-sm">
-        <div class="col-md-4 mb-3">
-          <div class="sidebar text-center">
-            <div class="d-flex flex-column align-items-center">
-              <img src="https://as2.ftcdn.net/v2/jpg/04/94/87/27/1000_F_494872791_Sietp2QieyDuZIIk296WFgKMk7OHKOQU.jpg" alt="Admin" class="rounded-circle">
-              <h4>rawaaah63</h4> <!-- Displaying username -->
+<div class="container-fluid">
+  <div class="main-body">
+    <div class="row gutters-sm">
+      <div class="col-md-4 mb-3">
+        <div class="sidebar text-center">
+          <div class="text-center" *ngIf="userProfile">
+            <img src="https://localhost:7280/api/UserProfile/getImages/{{userProfile?.image }}" alt="Profile Picture" class="rounded-circle" style="width: 50px; height: 50px;">
+            <h4>{{ userProfile?.username }}</h4>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-body">
+            <h6 class="mb-3">User Information</h6>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Full Name</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ userProfile?.name }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Username</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ userProfile?.username }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Email</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ userProfile?.email }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Phone</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ userProfile?.phoneNumber }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">City</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ userProfile?.city }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Street</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                {{ userProfile?.street }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-12">
+                <button class="btn btn-primary" [routerLink]="['/edit-profile', userProfile?.id]">Edit</button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-8">
-          <div class="card">
-            <div class="card-body">
-              <h6 class="mb-3">User Information</h6>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Full Name</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  Kenneth Valdez
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Username</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  rawaah63
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Email</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Phone</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-             
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Address</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  Bay Area, San Francisco, CA
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-12">
-                  <a class="btn btn-info" target="__blank" href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Subscription Table -->
+        <!-- Subscription Table -->
+        <div class="profile-container">
           <div class="card">
             <div class="card-body">
               <h6 class="mb-3">User Subscriptions</h6>
@@ -80,37 +86,45 @@
                     <th>Service Name</th>
                     <th>Start Date</th>
                     <th>End Date</th>
-             
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>Gym Service</td>
-                    <td>2024-01-01</td>
-                    <td>2024-12-31</td>
-                 
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>Yoga Service</td>
-                    <td>2024-02-01</td>
-                    <td>2024-08-01</td>
-           
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>Swimming Service</td>
-                    <td>2024-03-01</td>
-                    <td>2024-09-01</td>
-                  
+                  <tr *ngFor="let sub of userSubscriptions">
+                    <td>{{ sub.id }}</td>
+                    <td>{{ sub.name }}</td>
+                    <td>{{ sub.startDate }}</td>
+                    <td>{{ sub.endDate }}</td>
                   </tr>
                 </tbody>
               </table>
             </div>
           </div>
 
+          <div class="card mt-4">
+            <div class="card-body">
+              <h6 class="mb-3">User Orders</h6>
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>Order ID</th>
+                    <th>Product Name</th>
+                    <th>Status</th>
+                    <th>Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let order of userOrders">
+                    <td>{{ order.id }}</td>
+                    <td>{{ order.productName }}</td>
+                    <td>{{ order.status }}</td>
+                    <td>{{ order.date }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
+</div>
       </div>
     </div>
   </div>
