--- a/gumandhealth.client/src/app/pages/admin-class-edit/admin-class-edit.component.html
+++ b/gumandhealth.client/src/app/pages/admin-class-edit/admin-class-edit.component.html
@@ -35,7 +35,9 @@
         <input type="text" class="form-control" id="instructorName" [(ngModel)]="classItem.instructorName" name="instructorName" required>
       </div>
       <button type="submit" class="btn btn-primary">Save Changes</button>
+      <button type="button" class="btn btn-danger" (click)="deleteClass()">Delete Class</button>
     </form>
+
 
   </div>
 </div>
